force-app/main/default/objects/AH_Product_Replacement_Product__c/AH_Product_Replacement_Product__c.object-meta.xml
<CustomObject>
    <description>NICC-030142

This object is used to map current products to their replacement products.  This object was originally created for sunset migrations for the platform life cycle management team.</description>
    <label>Product Replacement Product</label>
    <nameField>
        <displayFormat>PRP-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Replacement Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>