force-app/main/default/objects/AH_Product_Replacement_Product__c/fields/Original_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-031902</description>
    <inlineHelpText>The product that is being replaced</inlineHelpText>
    <label>Original Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Replacement Products</relationshipLabel>
    <relationshipName>Product_Replacement_Products</relationshipName>
    <type>Lookup</type>
</CustomField>