force-app/main/default/objects/AH_Product_Replacement_Product__c/fields/Replacement_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Product_Code__c</fullName>
    <description>NICC-031902</description>
    <formula>Replacement_Product_Name__r.ProductCode</formula>
    <inlineHelpText>The product that will replace a  legacy product currently installed with the customer and identified for sunset</inlineHelpText>
    <label>Replacement Product Code</label>
    <type>Text</type>
</CustomField>