force-app/main/default/objects/AH_Product_Replacement_Product__c/fields/Replacement_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-031902</description>
    <inlineHelpText>The replacement product for the Original Product Name</inlineHelpText>
    <label>Replacement Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Replacement Products (Replacement Product SKU)</relationshipLabel>
    <relationshipName>Product_Replacement_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>