force-app/main/default/objects/AH_Product_Replacement_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Original_Product_Code__c</columns>
    <columns>Original_Product_Name__c</columns>
    <columns>Replacement_Product_Code__c</columns>
    <columns>Replacement_Product_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>